--- a/Day-4/media.css
+++ b/Day-4/media.css
@@ -28,6 +28,7 @@
     }
     .col-md-2{
         width: 50%;
+        background-color: bisque;
     }
     .col-md-3{
         width: 33.33%;
@@ -52,6 +53,7 @@
     }
     .col-lg-3{
         width: 33.33%;
+        background-color: rgb(193, 143, 241);
     }
     .col-lg-4{
         width: 25%;
@@ -76,6 +78,7 @@
     }
     .col-xl-4{
         width: 25%;
+        background-color: aqua;
     }
     .col-xl-5{
         width: 20%;
