--- a/project/style.css
+++ b/project/style.css
@@ -51,9 +51,20 @@ body{
 .justify-content-center{
     justify-content: center;
 }
+.justify-content-end{
+    justify-content: flex-end;
+}
 .align-items-center{
     align-items: center;
 }
+.align-items-start{
+    align-items: flex-start;
+}
+
+.d-inline{
+    display: inline;
+}
+
 
 .text-center{
     text-align: center;
@@ -103,3 +114,19 @@ p{
     margin: 10px;
     border-radius: 15px;
 }
+
+.upwork{
+    height: 110px;
+    width: 180px;
+}
+
+.foot{
+    width: 80%;
+    background-color: rgb(57, 57, 69);
+     border-radius: 15px;
+}
+
+/* .foot-img{
+    background-size: contain;
+} */
+ 
